# Pacman

./: .gitignore  CMakeLists.txt  README.md  config.ini
resources/maps/: level1.map  level2.map  level3.map
src/: cli_renderer.cpp  cli_renderer.h  game.cpp  game.h  ghost.cpp  ghost.h  gui_renderer.cpp  gui_renderer.h  main.cpp  map.cpp  map.h  platform_utils.cpp  platform_utils.h  pman.cpp  pman.h  renderer.h
src/core/: collision.cpp  collision.h  config.cpp  config.h  entity.h  game.cpp  game.h  game_state.cpp  game_state.h  game_timer.cpp  ghost.cpp  ghost.h  map.cpp  map.h  pman.cpp  pman.h  systems.cpp  systems.h
src/core/config/: config.cpp
src/core/entities/: entity.h  ghost.cpp  ghost.h  pman.cpp  pman.h
src/core/game/: game.cpp  game.h  game_timer.cpp  game_timer.h
src/core/game_context/: game_context.h
src/core/leaderboard/: leaderboard.cpp  leaderboard.h
src/core/map/: map.cpp  map.h  map_loader.cpp  map_loader.h
src/core/states/: game_state.cpp  game_state.h
src/core/systems/: systems.cpp  systems.h
src/input_handler/: cli_input_handler.cpp  cli_input_handler.h  gui_input_handler.cpp  gui_input_handler.h  input.h  input_handler.h
src/rendering/: cli_renderer.cpp  cli_renderer.h  gui_renderer.cpp  gui_renderer.h  renderer.h
src/utils/: platform_utils.cpp  platform_utils.h
tests/: CMakeLists.txt
tests/core/config/: config_test.cpp
tests/core/entities/: ghost_test.cpp  pman_test.cpp
tests/core/map/: map_loader_test.cpp
